--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Accessories.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Accessories.xml
@@ -7,5 +7,8 @@
   <LLamp.label>Керосиноовая лампа</LLamp.label>
   <LLamp.description>Светильник, работающий на основе сгорания керосина.Но после широкого внедрения электрического освещения керосиновые лампы используются в основном там, где нет электричества, в качестве аварийных на случай отключения электроэнергии, а также туристами.</LLamp.description>
 
+  <YadaritBasin.label>Камера обогащения Ядарита</YadaritBasin.label>
+  <YadaritBasin.description>Прототип камеры что симулирует условия при которох было полученно первое Ядарит ядро..</YadaritBasin.description>
+
 
 </LanguageData>
