--- a/Languages/Russian/DefInjected/ThingDef/TechResources.xml
+++ b/Languages/Russian/DefInjected/ThingDef/TechResources.xml
@@ -3,9 +3,19 @@
 
   <yadarit.label>Ядарит</yadarit.label>
   <yadarit.description>Ядарит - таинственое вещество что обладает мистичискими свойствами и высокой научной ценностью.</yadarit.description>
+  
+  
+  <yadaritRaW.label>Сырой Ядарит</yadaritRaW.label>
+  <yadaritRaW.description> Сырой Ядарит - Минерал с множеством сторроних примесей,не опасен для человека.</yadaritRaW.description>
 
   <YadareCell.label>Ядарит Ядро</YadareCell.label>
   <YadareCell.description>Компактный аккумулятор Ядарита, благодаря специфике, может использоваться в устройствах с высоким энергопотреблением(Хранить в экранированом помещении вдали от людей).</YadareCell.description>
+
+
+
+<DangerCore.label>Нестабильное Ядарит ядро</DangerCore.label>
+  <DangerCore.description>Ядро ядарита лишенное защитной оболочки .Крайне опасный Изотоп с быстрым периудом распада(ОСТОРОЖНО! НЕ ПОДХОДИТЬ ЖИВЫМ ОБЪЕКТАМ!(Ядро отравляет площадь радиусом в 32клетки уничтожая растения/Зона смертельного поражения людей 10 клеток)).</DangerCore.description>
+  
 
   <SealOfPurity.label>Печать Чистоты</SealOfPurity.label>
   <SealOfPurity.description>Печать Чистоты используется Имперскими воинами. Она наносится на оружие, доспехи и транспортные средства. Печать чистоты представляет собой восковую печать, которой закреплен пергамент с надписями и молитвами. Обычно печать чистоты наносится на видное место на броне и символизирует, что владелец не несет на себе ни малейшей скверны Хаоса</SealOfPurity.description>
