--- a/Languages/Russian/DefInjected/ThingDef/Plants_Cultivated_Vegetables.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Plants_Cultivated_Vegetables.xml
@@ -4,5 +4,7 @@
   <YadaritPlant.label>Кристальная грибница</YadaritPlant.label>
   <YadaritPlant.description>Искуственная грибница,что по сути своей является вершиной селекции и геной инженерии .Способно вытягивать редкий минерал "Ядарит" из недр земли и концентрировать его в виде кристалов на поверхности, на вид красиво.</YadaritPlant.description>
 
+  <CristalPlant.label>Кристал</CristalPlant.label>
+  <CristalPlant.description>Большой кристал ,что выглядит крайне превлекательно.</CristalPlant.description>
 
 </LanguageData>
