--- a/Languages/Russian/DefInjected/ThingDef/Plants_Cultivated_Vegetables.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Plants_Cultivated_Vegetables.xml
@@ -7,4 +7,7 @@
   <CristalPlant.label>Кристал</CristalPlant.label>
   <CristalPlant.description>Большой кристал ,что выглядит крайне превлекательно.</CristalPlant.description>
 
+<CristalPlant.comps.CompGiveThoughtToAllMapPawnsOnDestroy.message>Кристал разрушен ,звон колокольчиков разнёсся по всей округе ,в мире что то незримо изменилось .Ждите последствий.Кто посеет ветер , пожнёт бурю.</CristalPlant.comps.CompGiveThoughtToAllMapPawnsOnDestroy.message>
+
+
 </LanguageData>
