--- a/Languages/Russian/DefInjected/ThingDef/Weapons_Pistols.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Weapons_Pistols.xml
@@ -10,7 +10,7 @@
   <!-- SmithWesson M1917 -->
 
   <Gun_PlasmaFox.label>Ярость Лиса</Gun_PlasmaFox.label>
-  <Gun_PlasmaFox.description>,,Полярный лис передаёт привет,,Гласит гравировка на оружии ,именная модель плазменного пистолета разработанная по спец заказу(Крафт невозможен).</Gun_PlasmaFox.description>
+  <Gun_PlasmaFox.description>"Полярный лис передаёт привет"Гласит гравировка на оружии ,именная модель плазменного пистолета разработанная по спец заказу(Крафт невозможен).</Gun_PlasmaFox.description>
 
 
 </LanguageData>
