--- a/Languages/Russian/DefInjected/NeedDef/YadaritInhibit.xml
+++ b/Languages/Russian/DefInjected/NeedDef/YadaritInhibit.xml
@@ -2,7 +2,7 @@
 <LanguageData>
 
   <Chemical_EggGold.label>Благославление Кукухи</Chemical_EggGold.label>
-  <Chemical_EggGold.description>Единожды приняв дар от него трудно отказатся.</Chemical_EggGold.description>
+  <Chemical_EggGold.description>Единожды приняв дар, от него трудно отказатся.</Chemical_EggGold.description>
 
 
 </LanguageData>
