--- a/Languages/Russian/DefInjected/ThingDef/Weapons_Turrets_Sentry.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Weapons_Turrets_Sentry.xml
@@ -11,6 +11,10 @@
 
   <Gun_AAA.label>«Тихарь»</Gun_AAA.label>
   <Gun_AAA.description>«Тихарь» — пневматическое, мультикомпрессионное оружие . Оснащен встроенным в приклад баллоном со сжатым воздухом, насосом поршневого типа и манометром давления.</Gun_AAA.description>
+  
+  <Gun_flam.label>«Светлячок»</Gun_flam.label>
+  <Gun_flam.description>«Светлячок» — Стационарный автоматичиский военный огнемёт.</Gun_flam.description>
+
 
   <Gun_Radio.label>Прототип Ядарит излучателя</Gun_Radio.label>
   <Gun_Radio.description>Прототип Излучателя .Благодаря прорыву в Ядарит технологии удалось создать сфокусированый луч ядарит излучения.Для инициализации реакции в камере Вильсона , перед выстрелом следует поместить Ядарит стержни и подать на них разряд высокой частоты...</Gun_Radio.description>
