--- a/Languages/Russian/DefInjected/ThingDef/Weapons_Turrets_Sentry.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Weapons_Turrets_Sentry.xml
@@ -16,9 +16,12 @@
   <Gun_Radio.description>Прототип Излучателя .Благодаря прорыву в Ядарит технологии удалось создать сфокусированый луч ядарит излучения.Для инициализации реакции в камере Вильсона , перед выстрелом следует поместить Ядарит стержни и подать на них разряд высокой частоты...</Gun_Radio.description>
 
   <Gun_flam.label>«Светлячок»</Gun_flam.label>
-  <Gun_flam.description>«Светлячок» — Стационарный автоматичиский военный огнемёт.</Gun_flam.description>
+  <Gun_flam.description>«Светлячок» — Стационарный автоматичиский военный огнемёт.Подарим тепло всем,почти даром.</Gun_flam.description>
 
-
+ <Gun_Rifl.label>«Lee-Enfield.v2»</Gun_Rifl.label>
+  <Gun_Rifl.description>Древняя однозарядная винтовка ,установленная на поворотный штатив. Хорошая дальность, хорошая мощность, низкая скорострельность,слегка увеличенный магазин до 30 патронов(.303 British).</Gun_Rifl.description>
+  
+  
   <!--<Gun_ArtTurret.label>152mm артиллерия</Gun_ArtTurret.label>-->
   <!--<Gun_ArtTurret.description>152mm артиллерия, вооруженная гаубицами и предназначенная для поражения открытых и укрытых целей, а также для разрушения полевых оборонительных сооружений. Наличие артиллерийских выстрелов раздельного заряжания обеспечивает возможность широкого маневра траекториями.</Gun_ArtTurret.description>-->
 
