--- a/Languages/Russian/DefInjected/CombatExtended.AmmoSetDef/Balls.xml
+++ b/Languages/Russian/DefInjected/CombatExtended.AmmoSetDef/Balls.xml
@@ -3,7 +3,7 @@
 
   <!-- AmmoSet -->
 
-  <AmmoSet_Balls.label>15-миллиметровые стальные шарики</AmmoSet_Balls.label>
+  <AmmoSet_Balls.label>15-миллиметровые шарики</AmmoSet_Balls.label>
 
 
 </LanguageData>
