--- a/Languages/Russian/DefInjected/ResearchProjectDef/ResearchProjects.xml
+++ b/Languages/Russian/DefInjected/ResearchProjectDef/ResearchProjects.xml
@@ -18,7 +18,7 @@
   <Pneumatics.label>Пневматика</Pneumatics.label>
   <Pneumatics.description>Обилие трубок и механизмов подтолкнуло наших инженеров на создание пневматической винтовки. Всё начиналось как забава , не более чем игрушка для стрельбы по банкам… после того как шарик пробил бетонную стену навылет ,были созданы компактные и мощные переносные винтовки ,а также их более крупные стационарные версии. Увы кустарное изготовление и отсутствие специализированного оборудования вносят большую погрешность в финале сборки.</Pneumatics.description>
 
-  <Old_generators.label>Обрывки чертежей старых механизмов</Old_generators.label>
+  <Old_generators.label>Обрывки чертежей</Old_generators.label>
   <Old_generators.description>После вдумчивого изучения наши специалисты смогли воссоздать технологию постройки довоенных генераторов. Понимание основ позволило нам также строить компактные версии генераторов с применением изотопов Ядарита</Old_generators.description>
 
   <InDevelopment.label>В разработке</InDevelopment.label>
