--- a/Languages/Russian/DefInjected/ThingCategoryDef/Balls.xml
+++ b/Languages/Russian/DefInjected/ThingCategoryDef/Balls.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <AmmoBalls.label>15-миллиметровые стальные шарики</AmmoBalls.label>
+  <AmmoBalls.label>15-миллиметровые  шарики</AmmoBalls.label>
 
 
 </LanguageData>
