--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Accessories.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Accessories.xml
@@ -11,7 +11,7 @@
   <YadaritBasin.description>Прототип камеры что симулирует условия при которох было полученно первое Ядарит ядро..</YadaritBasin.description>
 
   <DresserBasin.label>Прототип вакуумной печи</DresserBasin.label>
-  <DresserBasin.description>Прототип камеры что превращает железную руду в отличную сталь..</DresserBasin.description>
+  <DresserBasin.description>Прототип камеры что превращает  руду в отличную сталь..</DresserBasin.description>
 
 
 </LanguageData>
