--- a/Languages/Russian/DefInjected/ThingDef/Bilding_Traps.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Bilding_Traps.xml
@@ -14,7 +14,10 @@
   <Turret_xray.description>Прототип Излучателя .Благодаря прорыву в Ядарит технологии удалось создать сфокусированый луч ядарит излучения.Для инициализации реакции в камере Вильсона , перед выстрелом следуетпоместить Ядарит стержни и подать на них разряд высокой частоты...</Turret_xray.description>
 
   <Turret_flame.label>«Светлячок»</Turret_flame.label>
-  <Turret_flame.description>«Светлячок» — Стационарный автоматичиский военный огнемёт.</Turret_flame.description>
+  <Turret_flame.description>«Светлячок» — Стационарный автоматичиский военный огнемёт.Дарим тепло на растоянии.</Turret_flame.description>
+
+  <Turret_Rifel.label>«Lee-Enfield.v2»</Turret_Rifel.label>
+  <Turret_Rifel.description>Древняя однозарядная винтовка ,установленная на поворотный штатив. Хорошая дальность, хорошая мощность, низкая скорострельность,слегка увеличенный магазин до 30 патронов(.303 British).</Turret_Rifel.description>
 
   <TrapIED_Yadarit.label>Взрывное устройство с Ядаритом</TrapIED_Yadarit.label>
   <TrapIED_Yadarit.description>Взрывное устройство с применением токсичного минерала</TrapIED_Yadarit.description>
@@ -25,8 +28,6 @@
   <XBomb.label>X-01 Устройство</XBomb.label>
   <XBomb.description>X-01 предназначенна для очисктки огромных областей от нежелательной биологической формы жизни.Может быть активирована как вручную так и удалёно(Радио-детонаром)</XBomb.description>
   <XBomb.comps.0.useLabel>Нажать большую красную кнопку!</XBomb.comps.0.useLabel>
-  
-<Turret_Rifel.label>«Lee-Enfield.v2»</Turret_Rifel.label>
-  <Turret_Rifel.description>Древняя однозарядная винтовка ,установленная на поворотный штатив. Хорошая дальность, хорошая мощность, низкая скорострельность,слегка увеличенный магазин до 30 патронов(.303 British).</Turret_Rifel.description>
+
 
 </LanguageData>
