--- a/Languages/Russian/DefInjected/ThingDef/Weapons_Grenades.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Weapons_Grenades.xml
@@ -3,11 +3,11 @@
 
   <!-- Yadarit -->
 
-  <Proj_GrenadeYadar.label>Химичиская граната</Proj_GrenadeYadar.label>
+  <Proj_GrenadeYadar.label>Ядарит граната</Proj_GrenadeYadar.label>
 
-  <Weapon_GrenadeYadarit.label>Химичиская граната</Weapon_GrenadeYadarit.label>
-  <Weapon_GrenadeYadarit.description>Граната наполненая пыльцой ядарита.Оружие для уничтожения всего что дышит , идеально для устранения групп врагов(Учтите что вещи покрытые ядарит пылью уничтожаются)</Weapon_GrenadeYadarit.description>
-  <Weapon_GrenadeYadarit.verbs.0.label>Бросает Хим гранату!!!</Weapon_GrenadeYadarit.verbs.0.label>
+  <Weapon_GrenadeYadarit.label>Ядарит граната</Weapon_GrenadeYadarit.label>
+  <Weapon_GrenadeYadarit.description>Граната наполненая пыльцой ядарита.Оружие для уничтожения всего что дышит , идеально для устранения групп врагов.</Weapon_GrenadeYadarit.description>
+  <Weapon_GrenadeYadarit.verbs.0.label>Бросает ядарит гранату!!!</Weapon_GrenadeYadarit.verbs.0.label>
 
 
 </LanguageData>
