--- a/Languages/Russian/DefInjected/PawnKindDef/Races_Animal_Exotic.xml
+++ b/Languages/Russian/DefInjected/PawnKindDef/Races_Animal_Exotic.xml
@@ -26,6 +26,31 @@
   <GG.labelFemale>Милая Ожившая статуя</GG.labelFemale>
   <GG.labelFemalePlural>Милые Ожившие статуи</GG.labelFemalePlural>
 
+  <Kukuha.label>Дикая Кукуха</Kukuha.label>
+  <Kukuha.labelPlural>Дикая Кукуха</Kukuha.labelPlural>
+  <Kukuha.lifeStages.0.label>Дикая Кукуха</Kukuha.lifeStages.0.label>
+  <Kukuha.lifeStages.0.labelPlural>Дикая Кукуха</Kukuha.lifeStages.0.labelPlural>
+  <Kukuha.lifeStages.0.labelMale>Дикая Кукуха</Kukuha.lifeStages.0.labelMale>
+  <Kukuha.lifeStages.0.labelMalePlural>Дикая Кукуха</Kukuha.lifeStages.0.labelMalePlural>
+  <Kukuha.lifeStages.0.labelFemale>Дикая Кукуха</Kukuha.lifeStages.0.labelFemale>
+  <Kukuha.lifeStages.0.labelFemalePlural>Дикая Кукуха</Kukuha.lifeStages.0.labelFemalePlural>
+  <Kukuha.lifeStages.1.label>Дикая Кукуха</Kukuha.lifeStages.1.label>
+  <Kukuha.lifeStages.1.labelPlural>Дикая Кукуха</Kukuha.lifeStages.1.labelPlural>
+  <Kukuha.lifeStages.1.labelMale>Дикая Кукуха</Kukuha.lifeStages.1.labelMale>
+  <Kukuha.lifeStages.1.labelMalePlural>Дикая Кукуха</Kukuha.lifeStages.1.labelMalePlural>
+  <Kukuha.lifeStages.1.labelFemale>Дикая Кукуха</Kukuha.lifeStages.1.labelFemale>
+  <Kukuha.lifeStages.1.labelFemalePlural>Дикая Кукуха</Kukuha.lifeStages.1.labelFemalePlural>
+  <Kukuha.lifeStages.2.label>Дикая Кукуха</Kukuha.lifeStages.2.label>
+  <Kukuha.lifeStages.2.labelPlural>Дикая Кукуха</Kukuha.lifeStages.2.labelPlural>
+  <Kukuha.lifeStages.2.labelMale>Дикая Кукуха</Kukuha.lifeStages.2.labelMale>
+  <Kukuha.lifeStages.2.labelMalePlural>Дикая Кукуха</Kukuha.lifeStages.2.labelMalePlural>
+  <Kukuha.lifeStages.2.labelFemale>Дикая Кукуха</Kukuha.lifeStages.2.labelFemale>
+  <Kukuha.lifeStages.2.labelFemalePlural>Дикая Кукуха</Kukuha.lifeStages.2.labelFemalePlural>
+  <Kukuha.labelMale>Дикая Кукуха</Kukuha.labelMale>
+  <Kukuha.labelMalePlural>Дикая Кукуха</Kukuha.labelMalePlural>
+  <Kukuha.labelFemale>Дикая Кукуха</Kukuha.labelFemale>
+  <Kukuha.labelFemalePlural>Дикая Кукуха</Kukuha.labelFemalePlural>
+
   <reaper.label>Жнец</reaper.label>
   <reaper.labelPlural>Жнец</reaper.labelPlural>
   <reaper.lifeStages.0.label>Жнец</reaper.lifeStages.0.label>
