--- a/Languages/Russian/DefInjected/ThingDef/Races_Animal_Exotic.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Races_Animal_Exotic.xml
@@ -8,6 +8,12 @@
   <Kukuha.label>Дикая Кукуха</Kukuha.label>
   <Kukuha.description>В момент ментальной слабости этого мира, жестокая инопланетная сущность завладела гусиным разумом, и смогла спроецировать свой образ на поверхности, стала божеством, управляющим всеми мыслящими существами, ибо когда Кукуха отлетает - начинается безумие</Kukuha.description>
   <Kukuha.tools.1.label>Клюв</Kukuha.tools.1.label>
+  
+  
+   <KukuhaKlon.label>Клон Кукухи</KukuhaKlon.label>
+  <KukuhaKlon.description>Жалкая пародия на великую Кукуху ,извращённый разум сумашедшего гения попробовал воплоить суть кукухи в обычном гусе...Резутьтат разачаровал создателя ,так и были созданы боевые отряды гусей мутантов.</KukuhaKlon.description>
+  <KukuhaKlon.tools.1.label>Клюв</KukuhaKlon.tools.1.label>
+  
 
   <reaper.label>Жнец</reaper.label>
   <reaper.description>Кто то надругался над хомячком превратив его в ужасного жнеца ,берегитесь яда.</reaper.description>
