--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Power.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Power.xml
@@ -16,5 +16,8 @@
   <AIGenerator.label>Старый генератор</AIGenerator.label>
   <AIGenerator.description>Очень старый генератор, что пережил войну и суровые испытания временем. Хоть его лучшие годы давно позади, но хороший техник способен выжать с данной машинки ещё крохи энергии. Для обслуживания нужны редкие запчасти, что возможно сохранились на древних складах или у торговцев. Порой встречаются модели, что способны обеспечить светом маленькую колонию.</AIGenerator.description>
 
+  <BatteryX.label>Батарея X-01</BatteryX.label>
+  <BatteryX.description>Проведя многие часы за изучением поведения минерала (Х0-74/2А).Научная группа установила что при нахождении ядра в электролитичиской среде ускоряет востановительные реакции().Следует так-же учесть что поле которое образуется вокруг батареи могут причинить вред человеку.</BatteryX.description>
+
 
 </LanguageData>
