--- a/Languages/Russian/DefInjected/ThingDef/TechResources.xml
+++ b/Languages/Russian/DefInjected/ThingDef/TechResources.xml
@@ -22,5 +22,9 @@
   <DangerCore.label>Нестабильное Ядарит ядро</DangerCore.label>
   <DangerCore.description>Ядро ядарита лишенное защитной оболочки .Крайне опасный Изотоп с быстрым периудом распада(ОСТОРОЖНО! НЕ ПОДХОДИТЬ ЖИВЫМ ОБЪЕКТАМ!(Ядро отравляет площадь радиусом в 32клетки уничтожая растения/Зона смертельного поражения людей 10 клеток)).</DangerCore.description>
 
+  <KarBU.label>Блокнотик Пернатой</KarBU.label>
+  <KarBU.description>Блокнот найденный в обломках разбитой статуи. Наполнен потусторонней энергией. Осознание того что в блокноте записаны бесчисленные тайной вселенных искушает присвоить его, однако открыв первые страницы можно увидеть корявым почерком нацарапанные надписи (Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР-Кар-кАр-каР...) Возможно это шифр который предстоит разгадать, а возможно нет...</KarBU.description>
+  <KarBU.comps.0.useLabel>Изучить Блокнот</KarBU.comps.0.useLabel>
+
 
 </LanguageData>
